--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="CSS/styles.css" />
-    <title>Ristorante Con Fusion</title>
+    <title>Ristorante Con Fusion,</title>
   </head>
 
   <body>
