--- a/aboutus.html
+++ b/aboutus.html
@@ -29,14 +29,16 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand mr-auto" href="#"> Ristorante Con Fusion</a>
+        <a class="navbar-brand mr-auto" href="./index.html">
+          Ristorante Con Fusion</a
+        >
         <div class="collapse navbar-collapse" id="Navbar">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
-            </li>
             <li class="nav-item">
-              <a class="nav-link" href="./aboutus.html">About</a>
+              <a class="nav-link" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
@@ -61,12 +63,14 @@
     </header>
 
     <div class="container">
-      <div class="row row-content align-items-center">
-        <div class="col-12 col-sm-4 order-sm-last col-md-3">
-          <h3>Our Lipsmacking Culinary Creations</h3>
-        </div>
-        <div class="col col-sm order-sm-first col-md">
-          <h2>Uthappizza</h2>
+      <div class="row">
+        <ol class="col-12 breadcrumb">
+          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+          <li class="breadcrumb-item active">About Us</li>
+        </ol>
+        <div class="col-12">
+          <h3>About us</h3>
+          <hr />
           <p>
             A unique combination of Indian Uthappam (pancake) and Italian pizza,
             topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia
@@ -76,11 +80,8 @@
       </div>
 
       <div class="row row-content align-items-center">
-        <div class="col-12 col-sm-4 col-md-3">
-          <h3>This Month's Promotions</h3>
-        </div>
         <div class="col col-sm col-md">
-          <h2>Weekend Grand Buffet</h2>
+          <h2>Our History</h2>
           <p>
             Featuring mouthwatering combinations with a choice of five different
             salads, six enticing appetizers, six main entrees and five choicest
@@ -113,8 +114,8 @@
           <div class="col-4 col-sm-2">
             <h5>Links</h5>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="./aboutus.html">About</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="#">About</a></li>
               <li><a href="#">Menu</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
