carousels /slide show

--- a/aboutus.html
+++ b/aboutus.html
@@ -99,7 +99,8 @@
         <div class="col-sm-6">
           <h2>Our History</h2>
           <p>Started in 2010, Ristorante con Fusion ...</p>
-          <p>The Restaurant traces its humblel beginning</p>
+          <p>The Restaurant traces its humble beginning.
+         </p>
         </div>
         <div class="col-sm">
           <div class="card">
